--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="page-header">
+  <h1>Auction House <small>Bid and Win you favourite items!</small></h1>
+</div>
 
 <%= yield %>
 
