--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,1 @@
-
-<%= button_tag "/auth/facebook", :class => "btn btn-default" do %>
-     <%= t('.sign_in_via_facebook')%>
-<% end %>
+<div class="btn-group btn-group-lg"><%= link_to "Sign In via Facebook", "/auth/facebook", :class => "btn btn-default" %></div>
