add date picker and CRUD items for admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,24 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
+
 <div class="page-header">
   <h1>Auction House <small>Bid and Win you favourite items!</small></h1>
 </div>
+<nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Auction House</a>
+  </div>
+
+  <% if signed_in? %>
+  	<p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link"><%= current_user.name %></a></p>
+  <% end %>
+</nav>
+<p id="notice" style="color:red;"><%= flash[:notice] %></p>
 
 <%= yield %>
 
