--- a/app/views/members/items/show.html.erb
+++ b/app/views/members/items/show.html.erb
@@ -1,6 +1,14 @@
-<%=  link_to 'Back', admin_items_path %>
-<%=  link_to 'Edit', edit_admin_item_path(@item) %>
-<%=  link_to 'Delete', admin_item_path(@item), :method => :delete, :confirm => "Are you sure?" %>
+<%=  link_to 'Back', members_items_path %>
+
+<% if @item.errors.any? %>
+		<ul>
+  			<% @item.errors.full_messages.each do |msg| %>
+    			<li><%= msg %></li>
+  			<% end %>
+		</ul>
+<% end %>
+
+
 <ul class="list-group">
   <li class="list-group-item">Name: <%= @item.name %></li>
   <li class="list-group-item">Description: <%= @item.description %></li>
@@ -9,3 +17,5 @@
   <li class="list-group-item">Bid Unit: <%= @item.bid_unit.to_s %></li>
   <li class="list-group-item">Current Bid: <%= @item.starting_bid.to_s %></li>
 </ul>
+
+<div class="btn-group btn-group-lg"><%=  link_to 'Bid', members_item_bid_path(@item), :confirm => "You are placing a bid of #{@item.next_bid.to_s} credit points. Are you sure?", :class => "btn btn-default" %></div>
