add delayed to job to handle expired bids

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -14,7 +14,7 @@
             <td><%= item.id %></td>
             <td><%= item.name %></td>
             <td><%= item.ending_time.to_s %></td>
-            <td><%= item.starting_bid.to_s %></td>
+            <td><%= item.price.to_s %></td>
             <td><%=  link_to 'View', admin_item_path(item) %></td>
             </tr>
           <% end %>
