--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -7,5 +7,5 @@
   <li class="list-group-item">Starting Time: <%= @item.starting_time.to_s %></li>
   <li class="list-group-item">Ending Time: <%= @item.ending_time.to_s %></li>
   <li class="list-group-item">Bid Unit: <%= @item.bid_unit.to_s %></li>
-  <li class="list-group-item">Current Bid: <%= @item.starting_bid.to_s %></li>
+  <li class="list-group-item">Current Bid: <%= @item.price.to_s %></li>
 </ul>
