--- a/app/views/members/members/index.html.erb
+++ b/app/views/members/members/index.html.erb
@@ -1,3 +1,4 @@
 <div class="list-group">
   <%=  link_to 'View Items', members_items_path, :class => "list-group-item" %>
+  <%=  link_to 'Manage Credit', members_payments_path, :class => "list-group-item" %>
 </div>
