add backup daily, problem with adding from controller

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,4 +1,5 @@
 <div class="list-group">
   <%=  link_to 'New Item', new_admin_item_path, :class => "list-group-item" %>
   <%=  link_to 'View Items', admin_items_path, :class => "list-group-item" %>
+  <%=  link_to 'Generate Report', report_admin_items_path(format: "csv"), :class => "list-group-item" %>
 </div>
